change to constraint layout move strings to strings.xml add icons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Pogoda</string>
+    <string name="battery_icon">battery icon</string>
+    <string name="pressure_icon">pressure icon</string>
+    <string name="lux_icon">lux icon</string>
+    <string name="humidity_icon">humidity icon</string>
+    <string name="temperature_icon">temperature icon</string>
+    <string name="pressure">hPa</string>
+    <string name="volt">V</string>
+    <string name="readings">readings</string>
+    <string name="label">label</string>
+    <string name="sensors">sensors</string>
+    <string name="connection_error">Connection Error</string>
 </resources>
