--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,12 +6,13 @@
     <string name="humidity_icon">humidity icon</string>
     <string name="temperature_icon">temperature icon</string>
     <string name="readings">readings</string>
-    <string name="label">label</string>
-    <string name="sensors">sensors</string>
-    <string name="connection_error">Connection Error</string>
-    <string name="refresh">Refresh</string>
+    <string name="connection_error">Bład połączenia</string>
+    <string name="refresh">Odśwież</string>
     <string name="notification_title">Nakarm Sensorka!</string>
     <string name="notification_text">: bateria Sensorka wymaga naładowania!</string>
     <string name="sensor_channel">sensorki channel</string>
     <string name="sensor_description">Powiadomienia odnośnie sensorków</string>
+    <string name="appwidget_text">Sensorek</string>
+    <string name="add_widget">Dodaj sensorka</string>
+    <string name="temp_outside">Temperatura na balkonie</string>
 </resources>
